--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,9 @@ h2, h3{
     color: #ffffff;
     background: #ffffff;
     border-bottom: 2px solid #cccccc;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 #headerName{
@@ -171,6 +174,7 @@ h3, h2 {
 #conForm ul {
     margin-bottom: 20px;
     list-style-type: none;
+    padding-left: 0;
 }
   
 #conForm li {
@@ -204,44 +208,97 @@ input[type=submit] {
   border: 0 none;
 }
 
+/*media queries --------------------------------*/
+@media screen and (max-width:980px){
+    .container{
+        width: 100%;
+    }
+    nav a:last-child {
+        margin-right: 20px;
+    }
+    .bdycontent{
+        width: 65%;
+        margin-left: 35px;
+        background: #ffffff;
+        padding-top: 0;
+    }
+    #headerName{
+        margin-left: 40px;
+    }
+    .project img {
+        
+        width: 65%;
+    }
+    .project h3 {
+        width: 65%;
+        font-weight: 200;
+    }
+    .project {
+        position: relative;
+        float: left;
+        width: 200px;
+        margin: 0;
+        overflow: auto;
+    }
+    .project:nth-child(even) {
+        margin-right: 0px;
+    }
 
-  
-  
-  
+}
+@media screen and (max-width:768px){
+/* can't figure out how to center container again*/
+/*need to figure out how to keep the container box one size*/
+    .container {
+        width: 100%;
+        margin: 0 auto;
+        clear: both;
+    } 
+    nav a:last-child {
+        margin-right: 20px;
+    }
+    #headerName{
+        margin-left: 40px;
+    }
+    .project img {
+        
+        width: 65%;
+    }
+    .project h3 {
+        width: 65%;
+        font-weight: 200;
+    }
+    .project {
+        position: relative;
+        float: left;
+        width: 200px;
+        margin: 0;
+        overflow: auto;
+    }
+    .project:nth-child(even) {
+        margin-right: 0px;
+    }
+}
+@media screen and (max-width:640px){
+    /*need to center the nav */
+    #pgheader{
+        position: static; /* header stays in place*/
+        
+    }
+    #headerName{
+        width: 100%;
+        height: 90px;
+        margin-left: 0;
+      
+    }
+    #indexCont{
+        padding-top: 0;
+    }
+    nav{
+        clear: both;
+        display: inline-block;
+        margin-top: 25px auto;
+    }
 
 
-
-/*
-.pgheader{
-    text-align: center;
-    width: 100%;
-    height: 80px;
-    background-color: #ffffff;
 }
 
-.headerName{
-
-    float: left;
-    width: 30%;
-    display: block;
-    padding: 8px;
-    margin: 0;
-    
-}
-.navbar{
-    list-style-type: none;
-    float: left;
-   
-}
-.navitem{
-    float: left;
-    background-color: #dddddd;
-    display: block;
-    padding: 8px;
-
-}
-
-.bdycontent{
-    clear: left;
-}
-*/
